fix: low contrast on drag badge

--- a/components/list-table/list-table.component.scss
+++ b/components/list-table/list-table.component.scss
@@ -117,6 +117,7 @@ $badgeWidth: 250px;
         width: 100%;
         top: 7px;
         border: 2px solid $primary;
+        color: $primaryDark;
         background-color: $primaryLight;
         padding: 10px;
         border-radius: 4px;
@@ -128,8 +129,8 @@ $badgeWidth: 250px;
         top: 0;
         text-align: center;
         border-radius: 50%;
-        background-color: #e6b247;
-        color: #fff;
+        background-color: $primary;
+        color: $textOnPrimary;
         width: 20px;
         height: 20px;
         font-weight: bold;
